# vscode-now-playing

./: .gitignore  CONTRIBUTING.md  LICENSE  README.md
.github/workflows/: build.yml
docs/: _quarto.yml  commands.qmd  configuration.qmd  development.qmd  index.qmd  install.qmd  sidecar.qmd
extension/: package.json
extension/src/: extension.ts  format.ts  sidecar.ts  statusbar.ts  types.ts
now-playing/: Cargo.toml
now-playing/src/: state.rs
now-playing/src/sources/: mpris.rs
playbar-sidecar/src/: main.rs  state.rs
playbar-sidecar/src/sources/: mod.rs  mpris.rs
