[package]
name = "now-playing"
version = "0.2.0"
edition = "2021"
description = "Sidecar that reports the current MPRIS now-playing state as NDJSON"
license = "MIT"

[[bin]]
name = "now-playing"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "io-std", "io-util", "sync", "time", "signal"] }
async-trait = "0.1"

[target.'cfg(target_os = "linux")'.dependencies]
zbus = { version = "4", default-features = false, features = ["tokio"] }
futures-util = "0.3"

[profile.release]
lto = "thin"
strip = true
codegen-units = 1
